--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <div class="site-container">
+        <!-- Navagation bar -->
+        <div class="nav">
+            <nav>
+               <h1 class="logotype">Dillon Schultz</h1>
+                   <ul>
+                       <li><a href="index.html">About Me</a></li>
+                       <li><a href="portfolio.html">Portfolio</a></li>
+                       <li><a href="contact.html">Contact</a></li>
+                   </ul>
+            </nav>
+        </div>
     
+    <!-- Content -->
+        <div class="content-container">
+            <div class="main-card">
+                <h2>About Me</h2>
+                <img src="assets/images/self-portrait.jpg" alt="Image of Dillon Schultz" class="self-portrait">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tortor quam, venenatis quis pharetra a, sollicitudin eget augue. Vivamus dignissim ipsum at tellus efficitur varius. Nullam molestie eros egestas, dignissim lacus aliquam, consectetur leo. Aliquam vel metus libero. Fusce id est faucibus, tincidunt mi sed, aliquam velit. Nam feugiat odio non elementum pretium. Vivamus laoreet urna turpis, a vestibulum quam faucibus in. Fusce molestie ultrices tellus non aliquam. Aenean tincidunt sagittis pellentesque. Vestibulum sit amet consectetur ante. Fusce sollicitudin sapien eget consectetur finibus.</p>
+            </div>
+        
+        <!-- Side content -->
+            <div class="side-card">
+                <h3>Connect with Me</h3>
+                <!-- Social Links -->
+                <a href="https://github.com/dillonschultz93" target="_blank"><img src="assets/images/GitHub-icons/if_github_circle_black_107161.png" alt="GitHub logo" class="social-icon"></a>
+                <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow-icon"></a>
+                <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon"></a>
+            </div>
+        </div>
+        <div class="footer-container">
+            <footer>
+                Copyright 2017 Dillon Schultz
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
