layout in index.html done

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body background="assets/images/topography.png">
     <div class="site-container">
         <!-- Navagation bar -->
-        <div class="nav">
+        <div class="nav-container">
             <nav>
                <h1 class="logotype">Dillon Schultz</h1>
-                   <ul>
-                       <li><a href="index.html">About Me</a></li>
-                       <li><a href="portfolio.html">Portfolio</a></li>
+                   <ul class="nav-links">
+                       <li class="reorder"><a href="index.html">About Me |</a></li>
+                       <li class="reorder"><a href="portfolio.html">Portfolio |</a></li>
                        <li><a href="contact.html">Contact</a></li>
                    </ul>
             </nav>
@@ -25,7 +25,7 @@
             <div class="main-card">
                 <h2>About Me</h2>
                 <img src="assets/images/self-portrait.jpg" alt="Image of Dillon Schultz" class="self-portrait">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tortor quam, venenatis quis pharetra a, sollicitudin eget augue. Vivamus dignissim ipsum at tellus efficitur varius. Nullam molestie eros egestas, dignissim lacus aliquam, consectetur leo. Aliquam vel metus libero. Fusce id est faucibus, tincidunt mi sed, aliquam velit. Nam feugiat odio non elementum pretium. Vivamus laoreet urna turpis, a vestibulum quam faucibus in. Fusce molestie ultrices tellus non aliquam. Aenean tincidunt sagittis pellentesque. Vestibulum sit amet consectetur ante. Fusce sollicitudin sapien eget consectetur finibus.</p>
+                <p class="about-me-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tortor quam, venenatis quis pharetra a, sollicitudin eget augue. Vivamus dignissim ipsum at tellus efficitur varius. Nullam molestie eros egestas, dignissim lacus aliquam, consectetur leo. Aliquam vel metus libero. Fusce id est faucibus, tincidunt mi sed, aliquam velit. Nam feugiat odio non elementum pretium. Vivamus laoreet urna turpis, a vestibulum quam faucibus in. Fusce molestie ultrices tellus non aliquam. Aenean tincidunt sagittis pellentesque. Vestibulum sit amet consectetur ante. Fusce sollicitudin sapien eget consectetur finibus.</p>
             </div>
         
         <!-- Side content -->
@@ -33,8 +33,8 @@
                 <h3>Connect with Me</h3>
                 <!-- Social Links -->
                 <a href="https://github.com/dillonschultz93" target="_blank"><img src="assets/images/GitHub-icons/if_github_circle_black_107161.png" alt="GitHub logo" class="social-icon"></a>
-                <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow-icon"></a>
-                <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon"></a>
+                <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow-icon" class="social-icon"></a>
+                <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon" class="social-icon"></a>
             </div>
         </div>
         <div class="footer-container">
