Final layout on index.html, portfolio.html, and contact.html

--- a/index.html
+++ b/index.html
@@ -2,46 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body background="assets/images/topography.png">
-    <div class="site-container">
-        <!-- Navagation bar -->
-        <div class="nav-container">
-            <nav>
-               <h1 class="logotype">Dillon Schultz</h1>
-                   <ul class="nav-links">
-                       <li class="reorder"><a href="index.html">About Me |</a></li>
-                       <li class="reorder"><a href="portfolio.html">Portfolio |</a></li>
-                       <li><a href="contact.html">Contact</a></li>
-                   </ul>
-            </nav>
+<body>
+   <!-- Nav -->
+    <div class="nav-container">
+        <h1 class="logotype">Dillon Schultz</h1>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html" id="border">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+    <!-- Main content -->
+    <div class="content-container">
+        <div class="main-card">
+            <h2>About Me</h2>
+            <img src="assets/images/self-portrait.jpg" alt="image of Dillon Schultz" align="left">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nisl quam, imperdiet at vulputate vitae, posuere quis ex. In hac habitasse platea dictumst. Nulla risus sem, rutrum in lobortis sit amet, sollicitudin at arcu. Donec non convallis dolor. Nunc enim velit, porta lacinia porta nec, tempus fermentum sem. Mauris quis nibh pharetra, dapibus magna vitae, ultricies libero. Curabitur rutrum, arcu ullamcorper ultricies lobortis, massa nisl pretium massa, dapibus tempus mauris risus ac leo. Phasellus tortor mi, auctor id dictum quis, tempus eget libero. Nunc luctus rhoncus lacinia.</p>
+            <p>Duis hendrerit quam porttitor egestas placerat. Proin eleifend accumsan nibh non rutrum. Nulla condimentum, ante et bibendum convallis, magna tellus blandit sapien, vitae pretium tellus velit vel justo. Proin a cursus odio, ut ullamcorper ligula. Aenean dapibus ullamcorper eros, ac ullamcorper eros lacinia eget. Aliquam purus enim, rhoncus in sollicitudin a, semper ac turpis. Aliquam eget risus felis. Maecenas auctor fringilla justo. Mauris eget enim eros. Etiam lacinia ligula nunc, vel mollis mauris tristique eget. Praesent bibendum nibh in massa dignissim pretium. Aliquam dapibus lorem quis sapien sollicitudin sollicitudin. Mauris a dolor porttitor, sodales dolor tincidunt, convallis enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vel pretium metus.</p>
         </div>
-    
-    <!-- Content -->
-        <div class="content-container">
-            <div class="main-card">
-                <h2>About Me</h2>
-                <img src="assets/images/self-portrait.jpg" alt="Image of Dillon Schultz" class="self-portrait">
-                <p class="about-me-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tortor quam, venenatis quis pharetra a, sollicitudin eget augue. Vivamus dignissim ipsum at tellus efficitur varius. Nullam molestie eros egestas, dignissim lacus aliquam, consectetur leo. Aliquam vel metus libero. Fusce id est faucibus, tincidunt mi sed, aliquam velit. Nam feugiat odio non elementum pretium. Vivamus laoreet urna turpis, a vestibulum quam faucibus in. Fusce molestie ultrices tellus non aliquam. Aenean tincidunt sagittis pellentesque. Vestibulum sit amet consectetur ante. Fusce sollicitudin sapien eget consectetur finibus.</p>
-            </div>
-        
         <!-- Side content -->
-            <div class="side-card">
-                <h3>Connect with Me</h3>
-                <!-- Social Links -->
-                <a href="https://github.com/dillonschultz93" target="_blank"><img src="assets/images/GitHub-icons/if_github_circle_black_107161.png" alt="GitHub logo" class="social-icon"></a>
-                <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow-icon" class="social-icon"></a>
-                <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon" class="social-icon"></a>
-            </div>
-        </div>
-        <div class="footer-container">
-            <footer>
-                Copyright 2017 Dillon Schultz
-            </footer>
-        </div>
+        <div class="side-card">
+            <h3>Connect with Me</h3>
+            <!-- Social icons -->
+            <a href="https://github.com/dillonschultz93" target="_blank"><img src="assets/images/GitHub-icons/if_github_circle_black_107161.png" alt="GitHub logo" class="social-icon"></a>
+            <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow icon" class="social-icon"></a>
+            <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon" class="social-icon"></a>
+        </div>    
+    </div>
+    <!-- Sticky footer -->
+    <div class="clear"></div>
+    <div class="footer">
+        <p>&#169; Copyright 2017 Dillon Schultz</p>
     </div>
 </body>
 </html>
