--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <!-- Nav -->
+    <div class="nav-container">
+        <h1 class="logotype">Dillon Schultz</h1>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html" id="border">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+    <!-- Main content -->
+    <div class="content-container">
+        <div class="main-card">
+            <h2>Portfolio</h2>
+            <img src="assets/images/portfolio-images/300_300-1.png" alt="Colorado Springs" id="portfolio-item-left">
+            <img src="assets/images/portfolio-images/300_300-2.png" alt="Cripple Creek" id="portfolio-item-right">
+            <img src="assets/images/portfolio-images/300_300-3.png" alt="Denver, CO" id="portfolio-item-left">
+            <img src="assets/images/portfolio-images/300_300-4.png" alt="Pike's Peak" id="portfolio-item-right">
+            <img src="assets/images/portfolio-images/300_300-5.png" alt="Downtown Tucson" id="portfolio-item-left">
+        </div>
+        <!-- Side content -->
+        <div class="side-card">
+            <h3>Connect with Me</h3>
+            <!-- Social icons -->
+            <a href="https://github.com/dillonschultz93" target="_blank"><img src="assets/images/GitHub-icons/if_github_circle_black_107161.png" alt="GitHub logo" class="social-icon"></a>
+            <a href="https://stackoverflow.com/users/8528559/dillon-schultz" target="_blank"><img src="assets/images/StackOverflow-icons/if_stackoverflow_1220302.png" alt="StackOverflow icon" class="social-icon"></a>
+            <a href="https://www.linkedin.com/in/dillon-schultz-7a5b2bab/" target="_blank"><img src="assets/images/LinkedIn-icons/if_linkedin_circle_color_107178.png" alt="LinkedIn icon" class="social-icon"></a>
+        </div>    
+    </div>
+    <!-- Sticky footer -->
+    <div class="clear"></div>
+    <div class="footer">
+        <p>&#169; Copyright 2017 Dillon Schultz</p>
+    </div>
 </body>
 </html>
