--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
             <form action="#">
                 <div>
                     <label for="name">Name:</label>
-                    <input type="text" id="name" value="John Smith">
+                    <input type="text" id="name" placeholder="John Smith">
                 </div>
                 <div>
                     <label for="mail">E-mail:</label>
-                    <input type="mail" id="mail" value="example@gmail.com">
+                    <input type="mail" id="mail" placeholder="example@gmail.com">
                 </div>
                 <div>
                     <label for="msg">Message:</label>
