--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="content-container">
         <div class="main-card">
             <h2>About Me</h2>
-            <img src="assets/images/self-portrait.jpg" alt="image of Dillon Schultz" align="left">
+            <img src="assets/images/self-portrait.jpg" alt="image of Dillon Schultz" align="left" id="self-portrait">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nisl quam, imperdiet at vulputate vitae, posuere quis ex. In hac habitasse platea dictumst. Nulla risus sem, rutrum in lobortis sit amet, sollicitudin at arcu. Donec non convallis dolor. Nunc enim velit, porta lacinia porta nec, tempus fermentum sem. Mauris quis nibh pharetra, dapibus magna vitae, ultricies libero. Curabitur rutrum, arcu ullamcorper ultricies lobortis, massa nisl pretium massa, dapibus tempus mauris risus ac leo. Phasellus tortor mi, auctor id dictum quis, tempus eget libero. Nunc luctus rhoncus lacinia.</p>
             <p>Duis hendrerit quam porttitor egestas placerat. Proin eleifend accumsan nibh non rutrum. Nulla condimentum, ante et bibendum convallis, magna tellus blandit sapien, vitae pretium tellus velit vel justo. Proin a cursus odio, ut ullamcorper ligula. Aenean dapibus ullamcorper eros, ac ullamcorper eros lacinia eget. Aliquam purus enim, rhoncus in sollicitudin a, semper ac turpis. Aliquam eget risus felis. Maecenas auctor fringilla justo. Mauris eget enim eros. Etiam lacinia ligula nunc, vel mollis mauris tristique eget. Praesent bibendum nibh in massa dignissim pretium. Aliquam dapibus lorem quis sapien sollicitudin sollicitudin. Mauris a dolor porttitor, sodales dolor tincidunt, convallis enim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vel pretium metus.</p>
         </div>
