--- a/portfolio.html
+++ b/portfolio.html
@@ -22,11 +22,28 @@
     <div class="content-container">
         <div class="main-card">
             <h2>Portfolio</h2>
-            <img src="assets/images/portfolio-images/300_300-1.png" alt="Colorado Springs" id="portfolio-item-left">
-            <img src="assets/images/portfolio-images/300_300-2.png" alt="Cripple Creek" id="portfolio-item-right">
-            <img src="assets/images/portfolio-images/300_300-3.png" alt="Denver, CO" id="portfolio-item-left">
-            <img src="assets/images/portfolio-images/300_300-4.png" alt="Pike's Peak" id="portfolio-item-right">
-            <img src="assets/images/portfolio-images/300_300-5.png" alt="Downtown Tucson" id="portfolio-item-left">
+        <div class="portfolio-images">
+            <div class="portfolio-cell float-left">
+                <img src="assets/images/portfolio-images/300_300-1.png" alt="Colorado Springs" class="cell-image">
+                <h3>Colorado Springs</h3>
+            </div>
+            <div class="portfolio-cell float-right">
+                <img src="assets/images/portfolio-images/300_300-2.png" alt="Cripple Creek" class="cell-image">
+                <h3>Cripple Creek</h3>
+            </div>
+            <div class="portfolio-cell float-left ">
+                <img src="assets/images/portfolio-images/300_300-3.png" alt="Denver, CO" class="cell-image">
+                <h3>Denver, CO</h3>
+            </div>
+            <div class="portfolio-cell float-right">
+                <img src="assets/images/portfolio-images/300_300-4.png" alt="Pike's Peak" class="cell-image">
+                <h3>Pike's Peak</h3>
+            </div>
+            <div class="portfolio-cell float-left">
+                <img src="assets/images/portfolio-images/300_300-5.png" alt="Downtown Tucson" class="cell-image">
+                <h3>Downtown Tucson</h3>
+            </div>
+        </div>
         </div>
         <!-- Side content -->
         <div class="side-card">
