Final commit for sure this time

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,23 +24,23 @@
             <h2>Portfolio</h2>
         <div class="portfolio-images">
             <div class="portfolio-cell float-left">
-                <img src="assets/images/portfolio-images/300_300-1.png" alt="Colorado Springs" class="cell-image">
+                <a href="#"><img src="assets/images/portfolio-images/300_300-1.png" alt="Colorado Springs" class="cell-image"></a>
                 <h3>Colorado Springs</h3>
             </div>
             <div class="portfolio-cell float-right">
-                <img src="assets/images/portfolio-images/300_300-2.png" alt="Cripple Creek" class="cell-image">
+                <a href="#"><img src="assets/images/portfolio-images/300_300-2.png" alt="Cripple Creek" class="cell-image"></a>
                 <h3>Cripple Creek</h3>
             </div>
             <div class="portfolio-cell float-left ">
-                <img src="assets/images/portfolio-images/300_300-3.png" alt="Denver, CO" class="cell-image">
+                <a href="#"><img src="assets/images/portfolio-images/300_300-3.png" alt="Denver, CO" class="cell-image"></a>
                 <h3>Denver, CO</h3>
             </div>
             <div class="portfolio-cell float-right">
-                <img src="assets/images/portfolio-images/300_300-4.png" alt="Pike's Peak" class="cell-image">
+                <a href="#"><img src="assets/images/portfolio-images/300_300-4.png" alt="Pike's Peak" class="cell-image"></a>
                 <h3>Pike's Peak</h3>
             </div>
             <div class="portfolio-cell float-left">
-                <img src="assets/images/portfolio-images/300_300-5.png" alt="Downtown Tucson" class="cell-image">
+                <a href="#"><img src="assets/images/portfolio-images/300_300-5.png" alt="Downtown Tucson" class="cell-image"></a>
                 <h3>Downtown Tucson</h3>
             </div>
         </div>
